# chrome-bookmark-organizer

./: .gitignore  .gitmodules  1-2-3-HOW-TO-BOOKMARK-ORGANIZER.md  CLAUDE.md  README.md  bookmark_analyzer.py  bookmark_chunker.py  bookmark_html_generator.py  bookmark_organizer.py  bookmark_organizer_ai_accurate.py  bookmark_organizer_ai_powered.py  bookmark_organizer_smart.py  bookmark_organizer_with_deadlink_check.py  bookmark_processor_for_claude.py  bookmark_semantic_validator.py  bookmark_validator.py  serve_bookmarks.py  serve_bookmarks_clean.py  test-bookmarks.html
CLAUDE_PROCESSING/: CLAUDE_INSTRUCTIONS.json
bookmark-manager-app/: .dockerignore  .env.example  .env.production  (+64 more)
bookmark-manager-app/rust-backend/: 2025-06-20-1208-CHECKPOINT.md  2025-06-20-1208-TODO.md  A2A_RUST_ARCHITECTURE.md  CHECKPOINT-SUMMARY.md  CLAUDE.md  COMPILE_AND_RUN.md  Cargo.toml  DEPLOYMENT.md  LATEST-CHECKPOINT.md  LATEST-TODO.md  MIGRATION_STRATEGY.md  QUICK-REFERENCE.md  README.md  RUN_SERVICES.md  SCRIPTS_ANALYSIS.md  SCRIPTS_FLOW_DIAGRAM.md  TEST_AUTOMATION_PLAN.md  TODO.json  debug-config.sh  migrate-data.js  migration-report.json  package-lock.json  package.json  reset-admin-password.js  reset-admin-password.py  rust-platform  setup-ai-ops-tables.sh  start-auth.sh  start-bookmarks.sh  test-a2a-import.rs  test-config.sh  test-jwt.py  workspace-Cargo.toml
bookmark-manager-app/rust-backend/crates/a2a/: Cargo.toml
bookmark-manager-app/rust-backend/crates/a2a/src/: agent.rs  artifact.rs  lib.rs  manager.rs  queue.rs  task.rs
bookmark-manager-app/rust-backend/crates/agents/import/: Cargo.toml
bookmark-manager-app/rust-backend/crates/agents/import/src/: agent.rs  lib.rs  parser.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/: AI_CONFIGURATION.md  CHECKPOINT.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md
bookmark-manager-app/rust-backend/crates/ai-ops-core/examples/: basic_usage.rs  bookmark_integration.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/: error.rs  lib.rs  logging_integration.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/agent/: analysis.rs  base.rs  builder.rs  coordinator.rs  fix_executor.rs  learning.rs  mod.rs  root_cause.rs  service.rs  tests.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/ai/: anthropic.rs  embedding.rs  local.rs  mod.rs  openai.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/construction/: builder.rs  deployment.rs  mod.rs  templates.rs  validation.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/events/: mesh.rs  mod.rs  processor.rs  router.rs  store.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/knowledge/: embeddings.rs  graph.rs  mod.rs  patterns.rs  queries.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/patterns/: application.rs  detection.rs  evolution.rs  log_patterns.rs  mod.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/src/registry/: mod.rs
bookmark-manager-app/rust-backend/crates/ai-ops-core/tests/: integration_test.rs
bookmark-manager-app/rust-backend/crates/domain/: Cargo.toml
bookmark-manager-app/rust-backend/crates/domain/src/: errors.rs
bookmark-manager-app/rust-backend/crates/domain/src/entities/: bookmark.rs  collection.rs  mod.rs  tag.rs  user.rs
bookmark-manager-app/rust-backend/crates/domain/src/repositories/: mod.rs
bookmark-manager-app/rust-backend/crates/domain/src/value_objects/: mod.rs
bookmark-manager-app/rust-backend/crates/shared/: Cargo.toml
bookmark-manager-app/rust-backend/crates/shared/src/: auth.rs  config.rs  errors.rs  lib.rs  logging.rs  utils.rs
bookmark-manager-app/rust-backend/crates/shared/src/middleware/: auth.rs
bookmark-manager-app/rust-backend/docs/: 2025-06-17T2120.txt  A2A_REDIS_HYBRID_DESIGN.md  API_FRONTEND_BACKEND_MAPPING.md  BACKEND_HARDENING_PLAN.md  ENTERPRISE_API_DESIGN.md  ORCHESTRATOR_DEPENDENCIES.md  RUST_ACTIX_K8S_ARCHITECTURE.md  RUST_VS_GO_GATEWAY.md  rust-actix-architecture-doc.md  rust-actix-service-flow.mermaid
bookmark-manager-app/rust-backend/migrations/: 003_add_a2a_tables_fixed.sql  004_add_bookmark_status.sql  005_schema_improvements_rollback.sql  006_a2a_task_progress.sql  007_bookmark_import_tables.sql
bookmark-manager-app/rust-backend/migrations/events/: 001_create_events_table.sql
bookmark-manager-app/rust-backend/migrations/knowledge_graph/: 001_create_knowledge_tables.sql
bookmark-manager-app/rust-backend/scripts/: benchmark.sh  code-quality.sh  database-tools.sh  docker-build.sh  quick-test.sh  run-all.sh  run-dev.sh  run-tests.sh  service-manager.sh  start-dependencies.sh  view-logs.sh
bookmark-manager-app/rust-backend/services/aiops-monitor/: Cargo.toml
bookmark-manager-app/rust-backend/services/aiops-monitor/src/: main.rs
bookmark-manager-app/rust-backend/services/auth/: Cargo.toml
bookmark-manager-app/rust-backend/services/auth/migrations/: 001_create_users.sql
bookmark-manager-app/rust-backend/services/auth/src/: handlers.rs  main.rs  repository.rs
bookmark-manager-app/rust-backend/services/bookmarks/: Cargo.toml
bookmark-manager-app/rust-backend/services/bookmarks/migrations/: 001_bookmarks_tables.sql
bookmark-manager-app/rust-backend/services/bookmarks/src/: handlers.rs  lib.rs  main.rs  repository.rs
bookmark-manager-app/rust-backend/services/gateway/: Cargo.toml
bookmark-manager-app/rust-backend/services/gateway/src/: config.rs  main.rs  proxy.rs  static_files.rs
bookmark-manager-app/rust-backend/services/import/: Cargo.toml
bookmark-manager-app/rust-backend/services/import/src/: handlers.rs  main.rs  parser.rs  queue.rs  repository.rs
bookmark-manager-app/rust-backend/services/log-writer/: Cargo.toml
bookmark-manager-app/rust-backend/services/log-writer/src/: main.rs
bookmark-manager-app/rust-backend/services/search/: Cargo.toml
bookmark-manager-app/rust-backend/services/search/src/: embeddings.rs  handlers.rs  main.rs  repository.rs
bookmark-manager-app/rust-migration/log-writer-service/: Cargo.toml
bookmark-manager-app/rust-migration/log-writer-service/src/: main.rs
(+17923 files in other folders)
