[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/domain",
    "crates/a2a",
    "crates/ai-ops-core",
    "crates/agents/import",
    "services/gateway",
    "services/auth",
    "services/bookmarks",
    "services/import",
    "services/search",
    "services/aiops-monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bookmarks Platform Team"]
license = "MIT"

[workspace.dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-web-actors = "4.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager", "streams"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Testing
mockall = "0.12"
actix-rt = "2.9"

# Database extensions
pgvector = { version = "0.4", features = ["sqlx"] }

# Additional dependencies for AI-ops
async-trait = "0.1"
regex = "1.11"
once_cell = "1.20"
arc-swap = "1.7"
parking_lot = "0.12"
dashmap = "6.1"
config = "0.14"
dotenvy = "0.15"

# Internal crates
shared = { path = "crates/shared" }
domain = { path = "crates/domain" }
ai-ops-core = { path = "crates/ai-ops-core" }