[package]
name = "ai-ops-core"
version = "0.1.0"
edition = "2021"
authors = ["AZ1-ai <admin@az1.ai>"]
description = "Universal AI-powered infrastructure for agent-driven tool construction"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }

# AI and embeddings
reqwest = { workspace = true }
pgvector = { workspace = true }

# Utilities
once_cell = "1.20"
arc-swap = "1.7"
parking_lot = "0.12"
dashmap = "6.1"
futures = "0.3"

# Pattern matching
regex = { workspace = true }

# Configuration
config = "0.14"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
tempfile = "3.14"