[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
actix-web-httpauth.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenv.workspace = true
domain.workspace = true
config = "0.14"
futures = "0.3"