[package]
name = "aiops-monitor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aiops-monitor"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenv.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }

# Internal dependencies
shared.workspace = true
ai-ops-core.workspace = true