[package]
name = "bookmarks-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bookmarks-service"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
validator.workspace = true
anyhow.workspace = true
dotenv.workspace = true
url = "2.4"

# Internal dependencies
domain.workspace = true
shared.workspace = true