[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
actix-web-httpauth.workspace = true
actix-web-actors.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
anyhow.workspace = true
dotenv.workspace = true
reqwest.workspace = true
futures.workspace = true

# Internal dependencies
shared.workspace = true